'添加github链接文本'

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>可视化大屏</title>
+  <!-- 引入主页样式 -->
   <link rel="stylesheet" href="./css/index.css" />
 </head>
 
@@ -442,9 +443,11 @@
 </body>
 
 </html>
-
+<!-- rem字体 -->
 <script src="./js/setRem.js"></script>
+<!-- 图表 -->
 <script src="./js/echarts.js"></script>
+<!-- 主页js -->
 <script src="./js/index.js"></script>
 <!-- 地图 -->
 <script src="./js/china.js"></script>
